*Empty MediaWiki Message*

--- a/Sann.mw
+++ b/Sann.mw
@@ -1,21 +1,22 @@
-'''Sann''' oll' ja um ka parhilla iks erälde huunõh talo huunist kavvõmban, [[jõgi|jõõperve]] pääl vai lumbi veeren. Peris vanal aol tetti sanno ka maa sisse, nii et õnnõ katus vällä jäi paistma.
+[[Pilt:Triinu sann.jpg|200px|thumb|Kõrdatett vana sann Käädso külän. Süküs 2010. Ojari Triinu pilt]]
+'''Sann''' oll' ja um ka parhilla iks erälde hoonõh talo tõisist huunist kavvõmban, [[jõgi|jõõperve]] pääl vai lumbi veeren. Peris vanal aol tetti sanno ka maa sisse, nii et õnnõ katus vällä jäi paistuma.
 
-Vanast olliq kõik sannaq savvusannaq. Kütmise aigo tull' sau kõik sanna sisse, palgiq oll sisest kõik ärq mustas savvunuq ja nõõga koon. 
+Vanast olliq kõik sannaq savvusannaq. Kütmise aigo tull' sau kõik sanna sisse, palgiq olliq sisest kõik ärq mustas savvunuq ja nõõga kuun. 
 
-Sannaahi oll' ligi saina, maakivest ja savist tett, savil viil liiva seen. Keresekivis kor'ati kõik raudkiviq. Kerese alaqpoolõ pantiq suurõmbaq kiviq, päälepoolõ pantiq vähämbäq kiviq. Sanna es kütetäq kuusõpuuga, tuu pill kibõnit ja või sanna palama panda.
+Sannaahi oll' ligi saina, maakivvest ja savist tett, savil viil liiva seen. Keresekivves kor'ati kõik raudkiviq. Kerese alaqpoolõ pantiq suurõmbaq kiviq, päälepoolõ pantiq vähämbäq kiviq. Sanna es kütetäq kuusõpuuga, tuu pill kibõnit ja või sanna palama panda.
 
-[[Miis|Meheq]] käveq inne sannan, inne um sann kuumõmb, [[Naanõ|naasõq]] [[lats]]iga käveq perän. Kõik pererahvas ja tiinjäq ütenkoon.
+[[Miis|Meheq]] käveq inne sannan, inne um sann kuumõmb, [[Naanõ|naasõq]] [[lats]]iga käveq perän. Kõik pererahvas ja tiinjäq ütenkuun.
 
 Sääntseq vanõmbaq inemiseq, kel määnest kotust es olõq ja [[mõisa]]he moonamehes ka taha-as minnäq, nuuq elliq talo sannan. Kon oll' miis naasõga, kon naastõraas ütsindä. Latsõq käveq näil tallõ pite kar'an.
 
 
 == Sannaviht ==
 
-Mõskmise jaoss olliq vihaq noorõ kõo ossõst, noore kõo latva kiä ärq es lõikaq, tuu olõki-s vihass hüä. Inne [[jaanipäiv]]ä täuskuu aol lätsiq kõik maja naasõq üts lõunavaheq lehessile. Vihaq köüdeti kinniq ja panti sanna pääle orrõ pääle kuioma. Vihta havvutõdi kuuma vii sisen, sis pehme vihaga oll' hüä mõskõq. Ku leheq mant ärq lätsiväq, sis visati timä vällä sanna kõrvalõ, sis naasõq korssiq nuuq roodsuq kokko ja teiq leeväaho pühkmise luvvas.
+Mõskmisõ jaoss olliq vihaq noorõ kõo ossõst, noore kõo latva kiä ärq es lõikaq, tuu olõki-s vihass hüä. Inne [[jaanipäiv]]ä täüskuu aol lätsiq kõik maja naasõq üts lõunavaheq lehessile. Vihaq köüdeti kinniq ja panti sanna pääle orrõ pääle kuioma. Vihta havvutõdi kuuma vii sisen, sis pehme vihaga oll' hüä mõskõq. Ku leheq mant ärq lätsiväq, sis visati timä vällä sanna kõrvalõ, sis naasõq korssiq nuuq roodsuq kokko ja teiq leeväaho pühkmise luvvas.
 
 == Sann ku arstimiskotus ==
 
-Ku mõni [[tõbi]] oll' külge saanuq, sis küteti sann lämmäs ja naati sääl arstma. Küläarst pand' tan kuppõ ja lask' [[veri|verd]]. Ku viländ verd joosnuq oll', köüdeti haav puuvillatüküga kinniq ja valmis.
+Ku mõni [[tõbi]] oll' külge saanuq, sis küteti sann lämmäs ja naati sääl arstma. Küläarst pand' tan kuppõ ja lask' [[veri|verd]]. Ku viländ verd joosnuq oll', köüdeti haav [[puuvill]]atüküga kinniq ja valmis.
 
 [[Katõgooria:Huunõq]]
 [[Katõgooria:Kultuur]]
