*Empty MediaWiki Message*

--- a/Oksaneni_Sofi.mw
+++ b/Oksaneni_Sofi.mw
@@ -1,5 +1,5 @@
 [[Pilt:Sofi Oksanen.jpg|thumb]]
-'''Oksaneni Sofi-Elina''' (sündünüq 7. vahtseaastakuu pääväl [[1977]] [[Jyväskylä]]n) om eesti juurigaq Soome [[kiränik]]. [[2008]]. aastagal sai Oksanen uma romaani "Puhdistus" ("Puhastus") iist [[Finlandia kirändüsavvohind|Finlandia kirändüsavvohinna]].
+'''Oksaneni Sofi-Elina''' (sündünüq 7. vahtseaastakuu pääväl [[1977]] [[Jyväskylä]]n) om [[eesti]] juurigaq [[Soomõ]] [[kiränik]]. [[2008]]. aastagal sai Oksanen uma romaani "Puhdistus" ("Puhastus") iist [[Finlandia kirändüsavvohind|Finlandia kirändüsavvohinna]].
 
 Oksaneni Sofi om opnuq [[Helsingi Ülikuul|Helingi Ülikoolin]] [[kirändüstiidüs]]t ja Helsingi tiatrikoolin näütekirändüst. Timä mõlõmbaq edimädseq raamaduq, romaan "Stalini lehmäq" ja edimält näütemängon ja ildampa romaanin ilmunuq "Puhastus", jutustasõq [[Eesti]]st ja iist'läsist. Oksanen lubasi samal teemäl kirotamist ka tulõvigun jakadaq.
 
@@ -38,3 +38,5 @@ Sofi Oksanen om ka gooti subkultuuri avvostaja.
 * Postimehe aastaga inemine 2009
 * [[Maarjamaa Risti IV klassi hääteomärk]] 2010
 * [[Põh'amaiõ Nõvvokogo kirändüsavvohind]] 2010
+
+[[Katõgooria:Soomõ kiräniguq]]
