*Empty MediaWiki Message*

--- a/Mansiq.mw
+++ b/Mansiq.mw
@@ -23,3 +23,5 @@ Nõvvkogoliit tugõsi mansi rahvusligu kirändüsõ välläandmist. 1931 luudi m
 Üts viimädse ao tundsambit mansi kiränikke om [[Šestalovi Juvan]].
 
 == Usk ==
+
+[[Katõgooria:Rahvaq]]
