--- a/Põlva_kihlkunna_kooliq.mw
+++ b/Põlva_kihlkunna_kooliq.mw
@@ -8,7 +8,7 @@
 
 ==Põhikooliq==
 
-*[[Johannese Kool Rosmal]]
+*[[Johannese Kuul Rosmal]]
 *[[Kauksi Põhikuul]]
 *[[Kääpä Põhikuul]]
 *[[Moostõ Põhikuul]]
