*Empty MediaWiki Message*

--- a/Katripäiv.mw
+++ b/Katripäiv.mw
@@ -56,3 +56,5 @@ Tuust kombõst tull` kõnnõkiilde ütlemine „Katariinalõ mütsü päähä pa
 ===Vällänlingiq===
 * [http://www.folklore.ee/Berta/tahtpaev-kadripaev.php Katripääväst]  Eesti rahvakallendri tähtpäivi andmõbaasin [http://et.wikipedia.org/wiki/Berta_%28andmebaas%29 Berta]
 * [http://www.erm.ee Eesti Rahva Muuseum]
+
+[[Katõgooria:Võro rahvakallendri]]
