*Empty MediaWiki Message*

--- a/Savvuritsik.mw
+++ b/Savvuritsik.mw
@@ -1,2 +1,4 @@
 [[Pilt:Smoke detector 01.jpg|pisi|Savvuritsik laeh]]'''Savvuritsik''' om eelektrisäedüs, mis nakas andma häiret, kuq tarrõ om tekkünüq savvu. Tuu av'tas arq hoita huunõ palamaminemist.
 Savvuritsik säetäs lakkõ (mitte saina pääle), hüä olõsiq, ku tarõ keskpaikaq, koridorih magamistarõ lähkohe. Ümbre savvuritsigu piat olõma kõkõ veideb puul miitrit vapa ruumi. Elo- ja magamistarõ savvuritsik and tiidäq nt televiisori palamaminemisõst, päst tulõkh'o iist, mis või algusõ siaq kündlest vai sigaretist. Savvuritsikat panda-ai küüki, vannitarrõ vai sanna, selle õt sis või tullaq võlss'häirit.
+
+[[Katõgooria:Eelektririistaq]]
