*Empty MediaWiki Message*

--- a/Nõglapai.mw
+++ b/Nõglapai.mw
@@ -1,5 +1,6 @@
-[[Pilt:Schurenbachhalde 13 ies.jpg|pisi|Nõglapaiu puhm]]'''Nõglapai''' (e. k. ''astelpaju'') om kasvotiidelisõh mõttõh hõpõpuuliidsi sugukunda kuuluja puhm vai puu.<br />
+[[Pilt:Schurenbachhalde 13 ies.jpg|pisi|Nõglapaiu puhm]]'''Nõglapai''' (e. k. ''astelpaju'') om kasvotiidelisõh mõttõh hõpõpuuliidsi sugukunda kuuluja [[puhm]] vai [[puu]].<br />
 Ahtabah tähendüseh om tego hariligu nõglapaiugaq (ld. k. ''Hippophae rhamnoides''), laebah tähendüseh nõglapaiu perregaq.
+
 == Nõglapaiu pereh ==
 Päält hariligu nõglapaiu arvatas perrehe kuuluvat viil kuus' tõugu:
 # Ld. k. ''Hippophae goniocarpa''
@@ -9,12 +10,15 @@ Päält hariligu nõglapaiu arvatas perrehe kuuluvat viil kuus' tõugu:
 # Paiulehine nõglapai (ld. k. ''Hippophae salicifolia'')
 # Tiibedi nõglapai (ld. k. ''Hippophae tibetana'')
 Kõik perrehe kuulujaq omma puidsõq kasvoq.
+
 == Vällänägeminõ ==
 Korgus 3–9 m. Ossaq nõklugaq. Leheq linõaalsõq, 0,5 tsendimiitrit lajaq ja 3–8 tsendimiitrit pikäq, hõbõhõdsõlt hahkjashaljaq.<br />
 Katõkualinõ kasv, imätseq ja esätseq häiermäq erälde kasvõl. Imätsil ja esätsil kasvõl om võimalik vahet tetäq ainuütsi häiermäurbõ perrä. Imätsel häiermäl olõ-õi kruun'lehti, nätaq ommaq inne kõlladsõq imäkotõ suuq. Esätsidõ häiermidõ kruun'leheq ommaq pruunikasõq, suumja kattõgaq.<br />
 Vil'ast om väikeste õlirikkidõ siimnidõgaq lihalinõ luuvili. Värvüs tõõsõndõlõs kultuur'sordõl paatjadsõst pihlõdsõ ja verväniq. Vil'aq kimmütüseq tihtsähe ja kimmähe kasulõ, miä tege saagi kor'stamisõ keerolidsõst.
+
 == Levimisõ ala ==
 Luudusõh kasus Õuruupast Tsiberi, Hiina ja Põh'a-Indianiq.
+
 == Kasvataminõ ==
 Harilik nõglapai om seeniq ainukõnõ nõglapaiu perrehe kuuluja tõug, minkast arõtõt sortõ seni vilju saamisõst kasvatõdas. Vaihtõpääl õdagumaailma jaost unõhtusõhõlma vaonuq kasv avastõdi vahtsõst 1930. aastakkõ Vinnemaal Barnaulih asujah Tsiberi aiandusinstituudih. Eestih om naat nõglapaiu tüüstüsligult kasvatama ni mar'ost tetüssit tegemä viimädsel aastakümnel. Siih tettüq nõglapaiu krõpsiq omma Roodsih müügil. Kittäq ommaq naaq saanuq kaq Pariisi, S'aksamaa ja Taani laatõ pääl. Pritsõl'ma om naat Pihkva ja Amstõrdami turgu. 
 == Tarbõndaminõ  ==
