--- a/Nõglapai.mw
+++ b/Nõglapai.mw
@@ -16,8 +16,8 @@ Korgus 3–9 m. Ossaq nõklugaq. Leheq linõaalsõq, 0,5 tsendimiitrit lajaq ja 
 Katõkualinõ kasv, imätseq ja esätseq häiermäq erälde kasvõl. Imätsil ja esätsil kasvõl om võimalik vahet tetäq ainuütsi häiermäurbõ perrä. Imätsel häiermäl olõ-õi kruun'lehti, nätaq ommaq inne kõlladsõq imäkotõ suuq. Esätsidõ häiermidõ kruun'leheq ommaq pruunikasõq, suumja kattõgaq.<br />
 Vil'ast om väikeste õlirikkidõ siimnidõgaq lihalinõ luuvili. Värvüs tõõsõndõlõs kultuur'sordõl paatjadsõst pihlõdsõ ja verväniq. Vil'aq kimmütüseq tihtsähe ja kimmähe kasulõ, miä tege saagi kor'stamisõ keerolidsõst.
 
-== Levimisõ ala ==
-Luudusõh kasus Õuruupast Tsiberi, Hiina ja Põh'a-Indianiq.
+== Kasumisõ ala ==
+Luudusõh kasus nõglapai [[Õuruupa]]st [[Tsiber]]i, [[Hiina]] ja Põh'a-[[India]]niq.
 
 == Kasvataminõ ==
 Harilik nõglapai om seeniq ainukõnõ nõglapaiu perrehe kuuluja tõug, minkast arõtõt sortõ seni vilju saamisõst kasvatõdas. Vaihtõpääl õdagumaailma jaost unõhtusõhõlma vaonuq kasv avastõdi vahtsõst 1930. aastakkõ Vinnemaal Barnaulih asujah Tsiberi aiandusinstituudih. Eestih om naat nõglapaiu tüüstüsligult kasvatama ni mar'ost tetüssit tegemä viimädsel aastakümnel. Siih tettüq nõglapaiu krõpsiq omma Roodsih müügil. Kittäq ommaq naaq saanuq kaq Pariisi, S'aksamaa ja Taani laatõ pääl. Pritsõl'ma om naat Pihkva ja Amstõrdami turgu. 
