--- a/Nõglapai.mw
+++ b/Nõglapai.mw
@@ -12,9 +12,9 @@ Päält hariligu nõglapaiu arvatas perrehe kuuluvat viil kuus' tõugu:
 Kõik perrehe kuulujaq omma puidsõq kasvoq.
 
 == Vällänägeminõ ==
-Korgus 3–9 m. Ossaq nõklugaq. Leheq linõaalsõq, 0,5 tsendimiitrit lajaq ja 3–8 tsendimiitrit pikäq, hõbõhõdsõlt hahkjashaljaq.<br />
-Katõkualinõ kasv, imätseq ja esätseq häiermäq erälde kasvõl. Imätsil ja esätsil kasvõl om võimalik vahet tetäq ainuütsi häiermäurbõ perrä. Imätsel häiermäl olõ-õi kruun'lehti, nätaq ommaq inne kõlladsõq imäkotõ suuq. Esätsidõ häiermidõ kruun'leheq ommaq pruunikasõq, suumja kattõgaq.<br />
-Vil'ast om väikeste õlirikkidõ siimnidõgaq lihalinõ luuvili. Värvüs tõõsõndõlõs kultuur'sordõl paatjadsõst pihlõdsõ ja verväniq. Vil'aq kimmütüseq tihtsähe ja kimmähe kasulõ, miä tege saagi kor'stamisõ keerolidsõst.
+Nõglapaiu puhmo korgus om 3–9 m. Ossaq ommaq nõklugaq. Leheq linõaalsõq, 0,5 tsendimiitrit lajaq ja 3–8 tsendimiitrit pikäq, hõbõhõdsõlt hahkjashaljaq.<br />
+Nõglapai om katõkualinõ kasv, imätseq ja esätseq häiermäq ommaq erälde kasvõl. Imätsil ja esätsil kasvõl om võimalik vahet tetäq ainuütsi häiermäurbõ perrä. Imätsel häiermäl olõ-õi kruun'lehti, nätäq ommaq õnnõ kõlladsõq imäkotõ suuq. Esätsidõ häiermidõ kruun'leheq ommaq pruunikadsõq, suumja kattõgaq.<br />
+Vil'ast om väikeise õlirikkidõ siimnidegaq lihalinõ luuvili. Värvüs tõõsõndõlõs kultuur'sordõl paatjadsõst pihlõdsõ ja verväniq. Vil'aq kimmütüseq tihtsähe ja kimmähe kasulõ, miä tege saagi kor'stamisõ keerolidsõst.
 
 == Kasumisõ ala ==
 Luudusõh kasus nõglapai [[Õuruupa]]st [[Tsiber]]i, [[Hiina]] ja Põh'a-[[India]]niq.
