--- a/Nõglapai.mw
+++ b/Nõglapai.mw
@@ -20,7 +20,8 @@ Vil'ast om väikeise õlirikkidõ siimnidegaq lihalinõ luuvili. Värvüs tõõs
 Luudusõh kasus nõglapai [[Õuruupa]]st [[Tsiber]]i, [[Hiina]] ja Põh'a-[[India]]niq.
 
 == Kasvataminõ ==
-Harilik nõglapai om seeniq ainukõnõ nõglapaiu perrehe kuuluja tõug, minkast arõtõt sortõ seni vilju saamisõst kasvatõdas. Vaihtõpääl õdagumaailma jaost unõhtusõhõlma vaonuq kasv avastõdi vahtsõst 1930. aastakkõ Vinnemaal Barnaulih asujah Tsiberi aiandusinstituudih. Eestih om naat nõglapaiu tüüstüsligult kasvatama ni mar'ost tetüssit tegemä viimädsel aastakümnel. Siih tettüq nõglapaiu krõpsiq omma Roodsih müügil. Kittäq ommaq naaq saanuq kaq Pariisi, S'aksamaa ja Taani laatõ pääl. Pritsõl'ma om naat Pihkva ja Amstõrdami turgu. 
+Harilik nõglapai om ainukõnõ nõglapaiu perrehe kuuluja tõug, minkast arõtõt sortõ seeniq aoniq vilju saamisõst kasvatõdas. Vaihtõpääl õdagumaailma jaost unõhtusõhõlma vaonuq kasv avastõdi vahtsõst 1930. aastakkõ [[Vinnemaa]]l Barnaulih asujah Tsiberi aiandusinstituudih. [[Eesti]]h om naat nõglapaiu tüüstüsligult kasvatama ni mar'ost tetüssit tegemä viimädsel aastakümnel. Siih tettüq nõglapaiu krõpsiq ommaq [[Roodsi]]h müügil. Kittäq ommaq naaq saanuq kaq [[Pariis]]i, [[S'aksamaa]] ja [[Taani]] laatõ pääl. Pritsõl'ma om naat [[Pihkva]] ja [[Amstõrdam]]i turgu.
+
 == Tarbõndaminõ  ==
 Taa om mitmõkeskene maatüükultuur', mink kasvataminõ om ütlemäldäq keskkunnahoitlik ni suurõbat ossa kasvost saa eri viisõl tarbõndaq. Kodaiduh kasvatõdas ehtepuu ja mar'apuhmana. Õt om mullastigu suhtõh veid'oqnõudlik, om katsõtõt perätüide palajakivikaibõtustõ hal'astamist nõglapaiugaq. Nõglapaiu mar'aq ni siimnist tet õli ommaq tervisliguq. Tarvitõdas mitmidõ paatskatuisi tegemisõst.
 
