--- a/Nõglapai.mw
+++ b/Nõglapai.mw
@@ -23,7 +23,7 @@ Luudusõh kasus nõglapai [[Õuruupa]]st [[Tsiber]]i, [[Hiina]] ja Põh'a-[[Indi
 Harilik nõglapai om ainukõnõ nõglapaiu perrehe kuuluja tõug, minkast arõtõt sortõ seeniq aoniq vilju saamisõst kasvatõdas. Vaihtõpääl õdagumaailma jaost unõhtusõhõlma vaonuq kasv avastõdi vahtsõst 1930. aastakkõ [[Vinnemaa]]l Barnaulih asujah Tsiberi aiandusinstituudih. [[Eesti]]h om naat nõglapaiu tüüstüsligult kasvatama ni mar'ost tetüssit tegemä viimädsel aastakümnel. Siih tettüq nõglapaiu krõpsiq ommaq [[Roodsi]]h müügil. Kittäq ommaq naaq saanuq kaq [[Pariis]]i, [[S'aksamaa]] ja [[Taani]] laatõ pääl. Pritsõl'ma om naat [[Pihkva]] ja [[Amstõrdam]]i turgu.
 
 == Tarbõndaminõ  ==
-Taa om mitmõkeskene maatüükultuur', mink kasvataminõ om ütlemäldäq keskkunnahoitlik ni suurõbat ossa kasvost saa eri viisõl tarbõndaq. Kodaiduh kasvatõdas ehtepuu ja mar'apuhmana. Õt om mullastigu suhtõh veid'oqnõudlik, om katsõtõt perätüide palajakivikaibõtustõ hal'astamist nõglapaiugaq. Nõglapaiu mar'aq ni siimnist tet õli ommaq tervisliguq. Tarvitõdas mitmidõ paatskatuisi tegemisõst.
+Taa om mitmõkeskene maatüükultuur', mink kasvataminõ om ütlemäldäq keskkunnahoitlik ni suurõbat ossa kasvost saa eri viisõl tarbõndaq. Kodaiduh kasvatõdas nõglapaiu ku ehtepuud ja mar'apuhma. Õt tä om mullastigu suhtõh veid'oqnõudlik, om katsõtõt perätüide palajakivikaibõtustõ hal'astamist nõglapaiugaq. Nõglapaiu mar'aq ni siimnist tett õli ommaq tervüsliguq. Tarvitõdas mitmidõ paatskatuisi tegemisõst.
 
 [[Katõgooria:Puuq]]
 [[Katõgooria:Mar'aq]]
