--- a/Mansiq.mw
+++ b/Mansiq.mw
@@ -4,7 +4,7 @@ Esiq nimetäseq nääq hinnäst maan´s´i, maan´s´i maahum, män´ s´. Naabr
 Mansiq kuulusõq riiklikult tunnustõduisi [[Vinnemaa väikeisi põlisrahvidõ nimistü|Vinnemaa väikeisi põlisrahvidõ]] hulka. Hantõ-Manssõ autonoomilidsen ringkunnan ommaq [[handi kiil|handi]] ja [[mansi kiil]] [[ametlik kiil|ammõtliguq keeleq]] vinne keele kõrval. 
 
 == Mansi kiil ==
-[[Mansi kiil]] kuulus [[Soomõ-ugri kiiliq|soome-ugri keeli]] [[ugri keeleq|ugri harro]].
+[[Mansi kiil]] kuulus [[Soomõ-ugri keeleq|soomõ-ugri kiili]] [[ugri keeleq|ugri harro]].
 
 ==Aolugu==
 Edimält elliq mansiq [[Uural]]idõ õdagunõlvul, a 11.–14. aastagasaal ajjõq [[komiq]] ja [[vindlädseq]] nääq tõsõlõ poolõ Uuraliid.
