*Empty MediaWiki Message*

--- a/Katripäiv.mw
+++ b/Katripäiv.mw
@@ -1,4 +1,4 @@
-'''Katripäiv''' om 25. märdikuu, eesti rahvakallendri tähtpäiv, miä om saanuq nime Aleksandria pühäku Katariina mälehtüspäävä perrä.
+'''Katripäiv''' om [[25. märtekuu päiv|25. märdikuu]], eesti rahvakallendri tähtpäiv, miä om saanuq nime Aleksandria pühäku Katariina mälehtüspäävä perrä.
 
 ===Perimüs===
 Euruupa rahvidõ siän sai pühä Katariina tunnõtus kar`akasomisõ kaitsmispühäkuna ja sünnütäjide naistõ avitajana. 
