*Empty MediaWiki Message*

--- a/Katripäiv.mw
+++ b/Katripäiv.mw
@@ -1,9 +1,9 @@
-'''Katripäiv''' om [[25. märtekuu päiv|25. märdikuu]], eesti rahvakallendri tähtpäiv, miä om saanuq nime Aleksandria pühäku Katariina mälehtüspäävä perrä.
+'''Katripäiv''' om [[25. märtekuu päiv|25. märdikuu]], [[eesti rahvakallendri]] tähtpäiv, miä om saanuq nime Aleksandria pühäku Katariina mälehtüspäävä perrä.
 
 ===Perimüs===
-Euruupa rahvidõ siän sai pühä Katariina tunnõtus kar`akasomisõ kaitsmispühäkuna ja sünnütäjide naistõ avitajana. 
+[[Õuruupa]] rahvidõ siän sai pühä Katariina tunnõtus ku kar`akasomisõ kaitsmispühäk ja ku sünnütäjide naisi avitaja. 
 
-10. sajandil jäi pühä Katariina mälehtüspäiv pidämä 25. märdikuulõ. 12. sajandis oll´ legend Katariina kotsilõ tõlgitu tollõaoliidsi tähtsämbidõ kiili sisse ja timä kõrd-kõrrast suurõmba populaarsusõ avvus pühitsedi ka kerikiid ja naiskloostriid.
+10. aastagasaal jäi pühä Katariina mälehtüspäiv pidämä 25. märdikuulõ. 12. aastagasaas oll´ legend Katariina kotsilõ tõlgit tollõaoliidsihe tähtsämbihe kiilihe ja timä kõrd-kõrrast suurõmba populaarsusõ avvus pühitsedi ka kerikiid ja naiskloostriid.
 
 ===Eesti===
 
