--- a/Katripäiv.mw
+++ b/Katripäiv.mw
@@ -7,7 +7,7 @@
 
 ===Eesti===
 
-Eestihe jõudsõ katripäiv üten ristiusuga 12. sajandil, ku kotusõpäälitsest süküstöie pühäst sai pühä Katariina mälehtüspäiv vai katripäiv. Katripäivä peeti naistõpühäss, tuuperäst et tollõs aos lõpõtiva naasõq nuuq välämidseq tüüq , miä olliq köüdetü kar´akasomisega.
+[[Eesti]]he jõudsõ katripäiv üten [[ristiusk|ristiusuga]] 12. aastagasaal, ku kotusõpäälitsest süküstöie pühäst sai pühä Katariina mälehtüspäiv vai katripäiv. Katripäivä peeti naisipühäs, tuuperäst et tollõs aos lõpõtivaq naasõq nuuq välätüüq, miä olliq köüdetüq  kar´akasomisega.
 
 Katripäävä tähtsämbäs osas om katrisandin käümine, miä perines aost, ku müüdä maad kävevä ringi annõtuisi kogova kloostridõ kejusmungaq, kiä tarvitiväq ummi laulõ seen ladinakiilset sõnna sanctus („pühä“) ja kiä suuvsõva perrerahvalõ hääd vilä-, kar`a- ja perreõnnõ. Tuuperäst arvataski, et eestiperäne „katrisant“ tulõnõs pühä Katariina (Katri) sandõst.
 
