--- a/Katripäiv.mw
+++ b/Katripäiv.mw
@@ -9,9 +9,9 @@
 
 [[Eesti]]he jõudsõ katripäiv üten [[ristiusk|ristiusuga]] 12. aastagasaal, ku kotusõpäälitsest süküstöie pühäst sai pühä Katariina mälehtüspäiv vai katripäiv. Katripäivä peeti naisipühäs, tuuperäst et tollõs aos lõpõtivaq naasõq nuuq välätüüq, miä olliq köüdetüq  kar´akasomisega.
 
-Katripäävä tähtsämbäs osas om katrisandin käümine, miä perines aost, ku müüdä maad kävevä ringi annõtuisi kogova kloostridõ kejusmungaq, kiä tarvitiväq ummi laulõ seen ladinakiilset sõnna sanctus („pühä“) ja kiä suuvsõva perrerahvalõ hääd vilä-, kar`a- ja perreõnnõ. Tuuperäst arvataski, et eestiperäne „katrisant“ tulõnõs pühä Katariina (Katri) sandõst.
+Katripäävä tähtsämbäs osas om katrisandin käümine, miä perines aost, ku müüdä maad käveväq ringi annõtuisi korjavaq kluustridõ kmungaq, kiä tarvitivaq ummi laulõ seen ladinakiilset sõnna sanctus („pühä“) ja kiä suuvsõvaq perrerahvalõ hääd vilä-, kar`a- ja perreõnnõ. Tuuperäst arvataski, et eestiperäne „katrisant“ tulõnõs pühä Katariina (Katri) sandõst.
 
-Eestläisil käveq katrisandõs tütriguq, kel olliq puhta valgõq rõivaq sällän, miä hindäst mõistagi tähend piimä (legendi perrä juuskõ pühäku hukkamisõ aigu timä kihäst vere asõmõl piim) ja Katariina mõttidõ neüdüslikku puhtust. Piimä köüdeti ka karàkasomisõ ja sünnütäjide naistõga.
+Eestläisil käveq katrisandõs tütriguq, kellel olliq puhtaq valgõq rõivaq sällän, miä hindäst mõista tähend' [[piim]]ä (legendi perrä juuskõ pühäku hukkamisõ aigu timä kihäst vere asõmõl piim) ja Katariina mõttidõ neüdüslikku puhtust. Piimä köüdeti ka kar'akasomisõ ja sünnütäjide naisiga.
 
 ===Kombõstik===
 
