--- a/Katripäiv.mw
+++ b/Katripäiv.mw
@@ -13,11 +13,11 @@ Katripäävä tähtsämbäs osas om katrisandin käümine, miä perines aost, ku
 
 Eestläisil käveq katrisandõs tütriguq, kellel olliq puhtaq valgõq rõivaq sällän, miä hindäst mõista tähend' [[piim]]ä (legendi perrä juuskõ pühäku hukkamisõ aigu timä kihäst vere asõmõl piim) ja Katariina mõttidõ neüdüslikku puhtust. Piimä köüdeti ka kar'akasomisõ ja sünnütäjide naisiga.
 
-===Kombõstik===
+===Kumbõq===
 
-Eestläisi jaoss om katripäiv olnuq täüs mitmit kombit, näütüses pöeti tuul pääväl lambit ni oodõti kar´aõnnõ (vanasõnagi ütles: Mart üle maa, Katri üle kar´a).
+Eestläisi jaos om katripäiv olnuq täüs mitmit kumbit, näütüses pöeti tuul pääväl [[lammas|lambit]] ni oodõti kar´aõnnõ (vanasõnagi ütles: Mart üle maa, Katri üle kar´a).
 
-Häste tunnõtu katrirituaal nägi vällä sääne: inne katripäivä vai katripuulpäävä minti maskeeritült laulu ja pillimänguga külä pääle käümä. Ussõ takan küsüti tervitüslaulu perrä tarrõ tulõku lupa. Ku luba käen, usutlõdi perrerahvast, anti mõistatuisi arvada, pritsiti vett ja visäti villä. Ku anniq käen, laulti tennüslaulu ja ärqminnen jumalagajätmise laulu.
+Häste tunnõtu katrirituaal nägi vällä sääne: inne katripäivä vai katripuulpäävä minti maskeeritült laulu ja pillimängoga külä pääle käümä. Ussõ takan küsüti tervitüslaulu perrä tarrõ tulõki lupa. Ku luba käen, usutlõdi perrerahvast, anti mõistatuisi arvada, pritsiti vett ja visati villä. Ku anniq käen, laulti tennüslaulu ja ärqminnen jumalagajätmise laulu.
 
 ===Enndeq===
 
