--- a/Katripäiv.mw
+++ b/Katripäiv.mw
@@ -19,20 +19,20 @@ Eestläisi jaos om katripäiv olnuq täüs mitmit kumbit, näütüses pöeti tuu
 
 Häste tunnõtu katrirituaal nägi vällä sääne: inne katripäivä vai katripuulpäävä minti maskeeritült laulu ja pillimängoga külä pääle käümä. Ussõ takan küsüti tervitüslaulu perrä tarrõ tulõki lupa. Ku luba käen, usutlõdi perrerahvast, anti mõistatuisi arvada, pritsiti vett ja visati villä. Ku anniq käen, laulti tennüslaulu ja ärqminnen jumalagajätmise laulu.
 
-===Enndeq===
+===Ettetähendüseq===
 
-* Ilmaenndeq
+* Ilmamärgiq
 ** Ku katripäävä om sula, sõs tähendäs, et andressepäävä (30. märdikuu) om külm.
-** Ku katripäävä tuulõq ja tormiq, sõs jõuluss tuu ilosa ilma.
-** Ku katripäävä külmetäss vai om lumi maan, hangõq aia veeren, sõs vahtsõaasta om uuta hääd viläsaaki.
+** Ku katripäävä tuulõq ja maruq, sõs jõulus tuu ilosa ilma.
+** Ku katripäävä külmetäs vai om lumi maan, hangõq aia veeren, sõs vahtsõaasta om uuta hääd viläsaaki.
 ** Ku katripäävä ja jõulu vaihõl om pall´o härmätüst, sõs vahtsõaasta om rüälõikamisõ aigu ilosaq ilmaq.
-** Katripäävä pidävät talvõtaat viskama jahhe kivi merre ja lämmä kivi allikahe.
-** Katripäävä lätt süküss talvõss üle.
-** Katri vesistäss ja sulatas tuu, miä Andress (Andressepäiv, 30. märdikuu) külmäss tege.
+** Katripäävä pidävät talvõtaat viskama jahhe kivi merde ja lämmä kivi lättehe.
+** Katripäävä lätt süküs talvõs üle.
+** Katri vesistäs ja sulatas tuu, miä Andress (Andressepäiv, 30. märdikuu) külmäs tege.
 ** Sääne, niguq om ilm katripäävä, om tä tõtõstõ ka küündlepäävä (2. radokuu).
 
-* Muuq enndeq ja kombõq
-** Katripäävä es tohiq kedrata, ummõlda, kutta, lambit pükäq, mõtsaeläjit laskõq.
+* Muuq ettetähendüseq ja kumbõq
+** Katripäävä es tohiq kedrätäq, ummõldaq, kutaq, lambit pükäq, mõtsaeläjit laskõq.
 ** Ku katripäävä tulõ võõras meesterahvas majja, sõs lambaq toovaq oinit, ku naistõrahvas, sõs utti.
 ** Katripäävä es tohiq kanasuppi kiitäq, sõs kanaq sööväq kapstaq ärq.
 
