--- a/Katripäiv.mw
+++ b/Katripäiv.mw
@@ -37,7 +37,7 @@ Häste tunnõtu katrirituaal nägi vällä sääne: inne katripäivä vai katrip
 ** Katripäävä es tohiq kanasuppi kiitäq, sõs kanaq sööväq kapstaq ärq.
 
 ===Muijal Eestin===
-* Väikü-Maarjan viidi tangupudõr kausiga lauta ja panti kausi ala kat`s langakerrä: üt`s must, tõnõ valgõ.
+* Väiko-Maarjan viidi suurmapudõr kausiga lauta ja panti kausi ala kat`s langakerrä: üt`s must, tõnõ valgõ.
 * Mõnõl puul seiväq pernaanõ ja tütrik lambidõ sigivüse õnnõs lambalaudan keedetüisi munnõ.
 
 ===Muijal maailman===
