--- a/Katripäiv.mw
+++ b/Katripäiv.mw
@@ -41,11 +41,11 @@ Häste tunnõtu katrirituaal nägi vällä sääne: inne katripäivä vai katrip
 * Mõnõl puul seiväq pernaanõ ja tütrik lambidõ sigivüse õnnõs lambalaudan keedetüisi munnõ.
 
 ===Muijal maailman===
-Pühä Katariina oll` katoliiklusõn  üts` nelätõistkümnest  hädän avitajast, minkperäst ülistiväq tedä nii preestriq ku poeediq.
+Pühä Katariina oll` katoliiklusõn  üts` nelätõistkümnest  hädän avitajast, minkperäst ülistiväq tedä nii priistreq ku poeediq.
 
-Prantsusmaal nõsõsi pühä Katariina pühäklikkus 15. sajandil esieränis avvu sisse, tuuperäst, et tä ilmut hinnäst, üten Neitsi Maarjaga, Jeanne d`Arcile. 17. sajandini peeti Katariina mälehtüspäivä pühänä, miä tähistedi uhkõmbalt ku apostlidõ tähtpäivi. Keskaost pääle olliq tütriguq pühä Katariina kaitsõ all. Egä aastaga 25. märdikuul tulliq 25-aastadsõq vallalidsõq tütriguq Katariina kujo mano, et tälle päähä panda müts, miä avitasiq miist leüdäq.
+[[Prantsusmaa]]l nõsõsi pühä Katariina pühäklikkus 15. aastagasaal esieränis avvo sisse, tuuperäst, et tä ilmut' hinnäst, üten Neitsi Maarjaga, Jeanne d`Arcile. 17. aastagasaani peeti Katariina mälehtüspäivä pühänä, midä tähistedi uhkõmbalt ku apostlidõ tähtpäivi. Keskaost pääle olliq tütriguq pühä Katariina kaitsõ all. Egä aastaga 25. märdikuul tulliq 25-aastadsõq vallalidsõq tütriguq Katariina kujo mano, et tälle päähä panda müts, miä avitasiq miist löüdäq.
 
-Tuust kombõst tull` kõnnõkiilde ütlemine „Katariinalõ mütsü päähä pandma“ (''coiffer sainte Catherine''), tähendüsega „vallalinõ ollaq ka viil 25-aastadsõlt“. Naisi, kiä keskaol säänestmuudu pühhist ossa saivaq, kutsuti Prantsusmaal Catherinette-ides. Peränpoolõ mütsü päähä pandmisõ kommõq kattõ, a viil täämpädsel päävälgi kandvaq üle 25-aastadsõq naasõq, kiä lääväq katriballilõ, esimuudu hindätettüt mütsü, miä näütäs näide vallalidsust ja köüdüst pühä Katariina mütsü päähäpandmisõga.
+Tuust kumbõst tull` kõnnõkiilde ütlemine „Katariinalõ mütsü päähä pandma“ (''coiffer sainte Catherine''), tähendüsega „vallalinõ ollaq ka viil 25-aastadsõlt“. Naisi, kiä keskaol säänestmuudu pühhist ossa saivaq, kutsuti Prantsusmaal Catherinette'es. Peränpoolõ mütsü päähä pandmisõ kommõq kattõ, a viil täämpädsel päävälgi kandvaq üle 25-aastadsõq naasõq, kiä lääväq katriballilõ, esimuudu hindätettüt mütsü, miä näütäs näide vallalidsust ja köüdüst pühä Katariina mütsü päähäpandmisõga.
 
 ===Kaeq viil===
 * [[Eesti rahvakallendri]]
