*Empty MediaWiki Message*

--- a/Johannese_Kuul_Rosmal.mw
+++ b/Johannese_Kuul_Rosmal.mw
@@ -1,14 +1,15 @@
 [[Pilt:Waldorfschule-Klassenraum.jpg|pisi|Valdorhvkooli klassiruum']]
-'''Johannese Kuul Rosmal''' om üledse haridusõ kuul, mink man tegotsõs kaq latsiaid. Taalõ valdorhvkooli alossäädüisi perra toimõndajalõ koolilõ <big>paniq alosõ latsivanõbaq</big> 1989. aastagal, kuq luudi Käisi Johhannese Kuul ja Latsiaid. 1990. aastaga sügüse tüüd alostanuq kuul kasvi 1999. aastagast põhikoolist. 2012/13 opiaastagal op' koolih <big>54 opilast 11 umaval'tsusõst</big> (Põlva-, Võro-, Valga- ja Tartomaalt) ni tüütäs <big>15 oppajat</big>. Koolih op'minõ om massulinõ. Kuuli pidä MTÜ Rosma Haridusselts', mink liikmist ommaq kaq latsivanõbaq.<br />Rosma Haridusseldsi opikava om riikligult tunnustõt.<br />
-Kaq muial maailmah ommq valdorhvkooliq tekkünüq hariligult kodanigualgatusõ kõrrah ja tõimõndasõq kuq eräkooliq.
+'''Johannese Kuul Rosmal''' om üledse haridusõ kuul, mink man tegotsõs kaq latsiaid. Taalõ valdorhvkooli alossäädüisi perrä toimõndajalõ koolilõ <big>panniq alosõ latsivanõbaq</big> 1989. aastagal, kuq luudi Käisi Johhannese Kuul ja Latsiaid. 1990. aastaga sügüse tüüd alostanuq kuul kasvi 1999. aastagast põhikoolist. 2012/13 opiaastagal opp' koolih <big>54 opilast 11 umaval'tsusõst</big> (Põlva-, Võro-, Valga- ja Tarto maakunnast) ni tüütäs <big>15 oppajat</big>. Koolih op'minõ om massulinõ. Kuuli pidä MTÜ Rosma Haridusselts', mink liikmist ommaq kaq latsivanõbaq.<br />Rosma Haridusseldsi opikava om riikligult tunnustõt.<br />
+Kaq muial maailmah ommaq valdorhvkooliq tekkünüq hariligult kodanigualgatusõ kõrrah ja tõimõndasõq kuq eräkooliq.
+
 == Koolimaja aolugu ==
-Koolimaja aolugu
-Edimädsest koolihuunõst oll' 20. aastasaa koolivahtsõndaja ja Eesti koolitusõ suurkujo Käisi Johannese sünnükodo Põlvamaal Põlva vallah Põlva küle all väikoh Rosma küläh. 1872. aastagal valmist saanuq koolimajah oll' üts koolitarõ, palvõtarõ, kats väikeist elotarrõ, koh elli Käisi Johannese esä uma perregaq alõtõh 1878. aastagast.<br />
+Edimädsest koolihuunõst oll' 20. aastasaa koolivahtsõndaja ja Eesti koolitusõ suurkujo [[Käisi Johannes]]e sünnükodo [[Põlva maakund|Põlva maakunnan]] [[Põlva vald|Põlva vallah]] [[Põlva]] küle all väikoh [[Rosma]] küläh. 1872. aastagal valmist saanuq koolimajah oll' üts koolitarõ, palvõtarõ, kats väikeist elotarrõ, koh elli Käisi Johannese esä uma perregaq alatõh 1878. aastagast.<br />
 1965. aastagal panti Rosma koolimajalõ mälehtüstahvli, aq kümme aastakka ildapa istudiq innidse Võro Oppajidõ Seminäri kasvandiguq ja Põlva Keskkooli iistolõjaq mälehtüstammistigu Päkämäe nõlvu pääle, koh oll' Käisi Johannese edimäne mängomaa.
-Rosma külä koolitarõ sais täämbädse pääväni Päkämäe hummogupoolidsõ nõlva all lajah ja sügüväh ürgoroh juuskja Peri uja ja Orajõõ lähkoh.<br />
+Rosma külä koolitarõ sais täämbädse pääväni Päkämäe hummogupoolidsõ nõlva all lajah ja sügüväh ürgoroh juuskja [[Peri uja]] ja [[Orajõgi|Orajõõ]] lähkoh.<br />
 Aoluulinõ koolimaja kuulus Põlva vallalõ, kinkagaq om sõlm't vara massuldaq tarvitamisõst andmisõ pikäaolinõ lepeh. Taa hoonõh om muinsuskaitsõ all.<br />
-1992. aastgal paniq latsõvanõbaq alosõ vahtsõ koolihuunõ eh'tämisõlõ, mink oll' hüätegevüsliguh kõrrah projektiir'nüq kooli latsõvanb arhitekt Saksi (Saks) Marika.<br />
+1992. aastagal panniq latsõvanõbaq alosõ vahtsõ koolihuunõ eh'tämisõlõ, mink oll' hüätegevüsliguh kõrrah projektiir'nüq kooli latsõvanõb arhitekt Saksi (Saks) Marika.<br />
 Kombõst om, õt valdorhvkooli hoonõh eh'tedäs õks kodonõ puinõ - tetä-äiq kirb'tsist vai petoon'st.
+
 == Kooli umaperä ==
 Johannese Kuul Rosmal olõ-õi harilik kuul'. Tego om valdorhvkooligaq, päälegiq üte vanõba ja Eesti kõkõ lõunõpoolidsõba valdorhvkooligaq. Kukkiq Tartost om kuul kolqveeränd'tunni massinasõidu tii kaugusõl.<br />
 Tunniq koolih alostasõq kell 9 hummogu.<br />
