--- a/Rosma.mw
+++ b/Rosma.mw
@@ -15,7 +15,7 @@ Rosmal om vahtsõnõ Põlva (kihlkunna) kalmuaid. 1990. aastagast pääle tüüt
 
 ==Luudus==
 
-Rosmalt juusk läbi [[Orajõgi]].
+Rosmalt juuskvaq läbi [[Orajõgi]] ja [[Peri uja]].
 
 ==Kuulsambaq inemiseq==
 
