--- a/Johannese_Kuul_Rosmal.mw
+++ b/Johannese_Kuul_Rosmal.mw
@@ -11,21 +11,22 @@ Aoluulinõ koolimaja kuulus Põlva vallalõ, kinkagaq om sõlm't vara massuldaq 
 Kombõst om, õt valdorhvkooli hoonõh eh'tedäs õks kodonõ puinõ - tetä-äiq kirb'tsist vai petoon'st.
 
 == Kooli umaperä ==
-Johannese Kuul Rosmal olõ-õi harilik kuul'. Tego om valdorhvkooligaq, päälegiq üte vanõba ja Eesti kõkõ lõunõpoolidsõba valdorhvkooligaq. Kukkiq Tartost om kuul kolqveeränd'tunni massinasõidu tii kaugusõl.<br />
+Johannese Kuul Rosmal olõ-õi harilik kuul'. Tego om valdorhvkooligaq, päälegiq üte vanõba ja Eesti kõkõ lõunõpoolidsõba valdorhvkooligaq. Kukkiq [[Tarto]]st om kuul kolqveeränd'tunni massinasõidu tii kaugusõl.<br />
 Tunniq koolih alostasõq kell 9 hummogu.<br />
 Kuul' om altõrnatiivsõ opikavagaq.<br />
 Tiidmisõq olõ-õi tsiht' erälde, naaq ommaq abist inemisõst kasumisõl ja maailma mõistmisõl.<br />
 Koolih om võet tsihist tervikligu harmoonilidsõ isiksusõ arõndaminõ, õt avitaq panõhtudaq ütsikerästel, kiä ommaq kuuhkõlah uma vaimu-, tundõ- ja lust'uselogaq.<br />
 Kaq puutrigaq saa tetäq huvitavat kunstitüüd.<ref>EENeti puutrijoonistuisi võigõlusõst osavõtja tüü [http://joonistaja.eenet.ee/konkurss/pilt.cgi?id=3147&aasta=2005]</ref><br />
-Valdorhvkuul om omanäolinõ tõist rööbildõst kasvatustiidelist mõtlõmist edüstäjä opiasotus.<br />
+Valdorhvkuul om umanäolinõ tõist rööbildõst kasvatustiidelist mõtlõmist edüstäjä opiasotus.<br />
 * Õt valdorhvpedagoogigah vai steinerpedagoogigah om '''rütmel ja rütmigal''' suur' tähtsüs, alostõdas (muusiga)tunni kõrragaq, näütüsest, 4.-5. klassih rütmihar'otusõgaq. Õga kuu om koolisisene esineminõ.
 * Tiidsähe om jääd kombõkotsidsõ '''tilagaq koolikellä''' mano. Vet' sjoo om kaq köüdet helüilo väärtüstämisõgaq nigu valdorhvkooli pall'oq muuqkiq umaperäq harilikkõ kuulõgaq võrrõldõh.
 * Koolilatsõq lugõvaq kõik kuuh '''söögipalvõht''', selle õt valdorhvpedagoogiga om tähtsähe köüdet kaq usugaq. Taad om nätäq kaq koolitarrih, koh õgah klassih löüd mõnõ pildi vai muu as'a, miä om köüdet ristiusugaq.
 * Joq mitu aastakka toimõndas kooli oppajidõ '''tiatripark''''. Sinnäq kuulusõq inemisõq eri vannusõrühmist.
 * Vanõbidõ hindä küsümiisist latsõ arõngu ja valdorhvpedagoogiga kotsilõ sai algusõ '''Vanõbidõ Kuul'''. Koolitusvahtsõndusliisi liikmishulkõ hoitminõ ja lev'täminõ Lõunõhummogu-Eestih om üts kooli vastutusrikkit ülesandit.
-* Johannese Kuul Rosmal om üts vähetsist Eestih, koh lõunast andas latsilõ paigapäälidsest tuurainõst tet '''mahhesüüki'''.<br />
+* Johannese Kuul Rosmal om üts vähätsist Eestih, koh lõunast andas latsilõ paigapäälidsest tuurainõst tet '''mahhesüüki'''.<br />
 :Kooli söögitarõh askõldanuq Setomaalt perit kolq sõsard, kiä ommaq tundsaq kaq nime all Kolmõ Sõsara Hõrgutisõq, ommaq üles ots'nuq paigapäälidsit talomiihi, kink käest olõsiq võimalik ostaq mahhehehe kasvatõt aia- ja põllusaaduisi, piimätetüssit, jauhõ ja muud.<br />
 * Rosma Haridusseldsi tarbõndusõh olõja uudsõ '''auruahogaq''' om võimalik pakkuq kooliperrele ökoloogilidsõlt puhtapa süüki, tarvitaq parebahe arq paigapäälist tuurainõt ni arõndaq tervikligult keskkunnasõbrast maailmakaehtust ja luuduslähkot elomuudu tugõhõjat koolitusasotust.
+
 == Sündmüseq kooli seeh ==
 * Tiidüsbuss' (23. lehekuu, 2005)
 :Tiidüsbuss' om suurt huvvi härätänüq kaq täüskasunuisi siäh.
