/* Sündmüseq kooli seeh */

--- a/Johannese_Kuul_Rosmal.mw
+++ b/Johannese_Kuul_Rosmal.mw
@@ -29,7 +29,7 @@ Valdorhvkuul om umanäolinõ tõist rööbildõst kasvatustiidelist mõtlõmist 
 
 == Sündmüseq kooli seeh ==
 * Tiidüsbuss' (23. lehekuu, 2005)
-:Tiidüsbuss' om suurt huvvi härätänüq kaq täüskasunuisi siäh.
+:Tiidüsbuss' om suurt huvvi herätänüq kaq täüskasunuisi siäh.
 * [http://www.minueesti.ee/minueesti/thinktank/view?id=429 Tiimiq Arq Mino Eesti mõttõtalguq] (1. lehekuu, 2009)
 :Johannese Koolih Rosmal toimu Rosma mõttõkoda.
 * [http://www.htk.tlu.ee/kais/vorumaa-lasteaiaopetajate-ja-klassiopetajate-oppepaeev Võromaa latsiaiaoppajidõ ja klassioppajidõ opipäiv] (17. märtekuu, 2010)
@@ -38,7 +38,7 @@ Valdorhvkuul om umanäolinõ tõist rööbildõst kasvatustiidelist mõtlõmist 
 :Talgidõ tsiht' oll' ütehkuuh kooliperre ja latsivanõbidõgaq üte väikese armsa kooli ja latsiaia talvõpuiõ iist huult kandaq.
 * Intuitiivpedagoogiga seminär' (18.-20. märtekuu, 2011)
 :Seminäril arotõli osavõtjidõgaq Desaxi Marcel Roodsist.
-* [http://www.president.ee/et/vabariigi-president/evelin-ilves/evelin-ilves-meedia/7006-evelin-ilves-kuelastas-rosma-kuelas-johannese-kooli-ja-lasteaeda/index.html Ilvese Evelini külästüs] (20. vahtsõaastakuu, 2012)
+* [http://www.president.ee/et/vabariigi-president/evelin-ilves/evelin-ilves-meedia/7006-evelin-ilves-kuelastas-rosma-kuelas-johannese-kooli-ja-lasteaeda/index.html Ilvese Evelini külänkäük] (20. vahtsõaastakuu, 2012)
 :Ilvese Evelini sõnno perrä om Rosma kooli kimmüsest oppajidõ ja latsivanõbidõ kuuhtüü - tahtminõ ja mõistminõ pakkuq latsilõ harmoonilist kasvokeskkonda, nn mahhepedagoogigat avvo sisse nõstõh.
 * [http://www.polvamaa.ee/index.php?page=3331 Seminär' "Hal'as Kuul'"] (17. põimukuu, 2012)
 :Sisu: Pall'odõ latsivanõbidõ ja kuulõ jaost om olulinõ, õt tehnigast ületülgähtünüq teedüsütiskunnah võõrdunu-us latsõq ja noorõq luudusõst.
@@ -46,12 +46,13 @@ Valdorhvkuul om umanäolinõ tõist rööbildõst kasvatustiidelist mõtlõmist 
 :Folklooripargi rõpõrtuaar'h ommaq udmurtõ vanaq rahvalauluq, kombõstik ja tandsuq.
 * Mahhesöögi päiv "Mahhesöögi pidolaud" (17. rehekuu, 2012)
 :Mahhõsöögi päiv viidi läbi, õt nõsta koolilatsi, oppajidõ ja vanõbidõ tiidsüst mahhesöögi hüvvist külist. Koolilatsi ni huviliisi vanõbit opati mahhesüüki valmistama.
-* [http://waldorfkool.info/page.php?p=768 Loovusõ nätäl' "Tunnõtuslik ja praktilinõ tüü maastigugaq"] (29. mahlakuu - 03. lehekuu, 2013) 
+* [http://waldorfkool.info/page.php?p=768 Luuvusõ nätäl' "Tunnõtuslik ja praktilinõ tüü maastigugaq"] (29. mahlakuu - 03. lehekuu, 2013) 
 :Küläh oliq:  Illiani Edwin (Bothmeri liigutõlõminõ, tüü maastigugaq), Franke Tanja  (savitüü, puutüü, tüü maastigugaq), Kolgi (Kolk) Kati (priistri, jutlõminõ täüskasunuisi ja latsigaq), Lumõ Tõnu (puutüü, tüü maastiguga), Kaunasõ valdorhvkooli  7. klass' (16 koolilast, oppaja, latsõvanõbaq).
 * V kõõperre koolituskonvõrents' "Hüäq valiguq koolitusõh. Tervüseline ütiskund" (18. lehekuu, 2013)
-:Kõnõldi tervüselidse ütiskunna ja tervüselidse kooli köüdüssist, vanõbidõ teküsüsest ni vahtsist koolitusõ alosõpanõkist. Kõrraldamisõst võt' ossa Rosma Haridusselts'. http://rosma.edu.ee/wp/category/uudised-teised-meist/
+:Kõnõldi tervüselidse ütiskunna ja tervüselidse kooli köüdüssist, vanõbidõ teküsüsest ni vahtsist koolitusõ alosõpanõkist. Kõrraldamisõst võtt' ossa Rosma Haridusselts'. http://rosma.edu.ee/wp/category/uudised-teised-meist/
 * [http://www.waldorf.vil.ee/uudised_ Valdorhvpupi kursus] (14.-16. piimäkuu, 2013)
 :Võimaldas kogõnuq pupimeistridõ juhõndamisõl valmistaq es' uma latsõlõ pupp', miä kest põlvõst põlvõ.
+
 == Sündmüseq välähpuul kuuli ==
 * Nütüs "Ao nõvvõh" (1999)
 :Viländi Muusõumih toimu koolilatsi mõttõ- ja käsitüü näütüs.
