--- a/Käisi_Johannes.mw
+++ b/Käisi_Johannes.mw
@@ -70,7 +70,7 @@ Avald' kogomigu "Loengit ja kokkovõttit" I-II nink aastagaraamatit "Tiil tüük
 ==Mälehtüse hoitminõ==
 
 *[[1988]]-[[1996]] kand' [[Põlva Ütisgümnaasium|Põlva Keskkuul]] Käisi Johannese nimme.
-*Rosma kuul kand (Käisi) Johannese nimme.
+*[[Johannese Kuul Rosmal]] kand (Käisi) Johannese nimme.
 
 ==Välislink==
 
