*Empty MediaWiki Message*

--- a/Käisi_Johannes.mw
+++ b/Käisi_Johannes.mw
@@ -1,7 +1,7 @@
 {{Elokäük 
  | nimi = Käisi Johannes
  | eestikeeline_nimi = Johannes Käis
- | pilt = 
+ | pilt = Johannes käis.jpg
  | sünnüaig = [[26. joulukuu päiv]] [[1885]] 
  | sünnüpaik = [[Rosma]], [[Põlva kihlklund]]
  | kuulmisaig = [[29. piimäkuu päiv]] [[1950]]
