*Empty MediaWiki Message*

--- a/Oksaneni_Sofi.mw
+++ b/Oksaneni_Sofi.mw
@@ -1,4 +1,12 @@
-[[Pilt:Sofi Oksanen.jpg|thumb]]
+{{Elokäük
+|pilt=Sofi Oksanen.jpg
+|nimi=Oksaneni Sofi
+|eestikeeline_nimi=Sofi Oksanen
+|sünnüaig=[[7. vahtsõaastakuu päiv]] [[1977]]
+|sünnüpaik=[[Jyväskükä]], [[Soomõ]]
+|ammõt=kiränik
+}}
+
 '''Oksaneni Sofi-Elina''' (sündünüq 7. vahtseaastakuu pääväl [[1977]] [[Jyväskylä]]n) om [[eesti]] juurigaq [[Soomõ]] [[kiränik]]. [[2008]]. aastagal sai Oksanen uma romaani "Puhdistus" ("Puhastus") iist [[Finlandia kirändüsavvohind|Finlandia kirändüsavvohinna]].
 
 Oksaneni Sofi om opnuq [[Helsingi Ülikuul|Helingi Ülikoolin]] [[kirändüstiidüs]]t ja Helsingi tiatrikoolin näütekirändüst. Timä mõlõmbaq edimädseq raamaduq, romaan "Stalini lehmäq" ja edimält näütemängon ja ildampa romaanin ilmunuq "Puhastus", jutustasõq [[Eesti]]st ja iist'läsist. Oksanen lubasi samal teemäl kirotamist ka tulõvigun jakadaq.
