*Empty MediaWiki Message*

--- a/Arotus:Jakapäiv.mw
+++ b/Arotus:Jakapäiv.mw
@@ -1,1 +1,2 @@
-S'ood artiklit peeti 2013. a. artiklivõistlusõl kõgõ parõmbas. --[[Pruukja:Valdis|Valdis]] ([[Pruukja arotus:Valdis|arutelu]]) 25. piimäkuu 2013, kell 15:35 (UTC)
+S'ood artiklit peeti 2013. a. artiklivõistlusõl kõgõ parõmbas. --[[Pruukja:Valdis|Valdis]] ([[Pruukja arotus:Valdis|arutelu]]) 25. piimäkuu 2013, kell 15:35 (UTC)<br />
+:Taha tennädäq, õt sjoo artikli man tett tüüd om tähtsäst peet ja tunnistõt korgõ koha väärülidsõst. Ait'umma võistlusõ kõrraldajilõ ni süriile. Võistlusõl osalõminõ oll' küländ suur' välläkutsõh võtta kokko julgus lõunõeesti keeleh kaq kirota, mitte õnnõ kõnõldaq. Viil kõrd pall'o tenno, õt sääne paikkundliisi kiili olõmaholõkit tugõja võistlus läbi viidi. Suurõ kummardusõ tii kõigilõ organisiirjilõ ja ütehvõistlõijlõ. --[[Pruukja:Sügüsene|Sügüsene]] ([[Pruukja arotus:Sügüsene|arutelu]]) 26. piimäkuu 2013, kell 17:07 (UTC)
