*Empty MediaWiki Message*

--- a/Guyana.mw
+++ b/Guyana.mw
@@ -2,7 +2,7 @@
 Nimi=Guyana|
 Genitiiv=Guyana|
 Lipp=Pilt:Flag of Guyana.svg|
-Vapp=Pilt:|
+Vapp=Pilt:Coat of Arms of Guyana.svg|
 Kaart=Pilt:Guyana in its region.svg|
 Riigikiil=[[inglüse kiil]]|
 Pääliin=[[Georgetown]]|
