--- a/Põh'ameri.mw
+++ b/Põh'ameri.mw
@@ -1,3 +1,4 @@
+[[Pilt:NASA NorthSea1.jpg|pisi|Põh'ameri]]
 '''Põh'ameri''' on [[meri]] [[Õuruupa]] maisõmaa ja [[Suurbritannia saar]]õ vaihhõl. Tä kuulus [[Atlandi suurmeri|Atlandi suurõmere]] veeremerri hulka.
 
 {{commons|North Sea}}
