--- a/Jaigi_Juhan.mw
+++ b/Jaigi_Juhan.mw
@@ -1,10 +1,10 @@
-[[Pilt:Perekond Jaigi hauasammas.jpg|pisi|Vahmil Jaigi havvasammas Rahumäe kalmuaian]]
+[[Pilt:Perekond Jaigi hauasammas.jpg|pisi|Jaigi vahmili havvasammas Rahumäe kalmuaian]]
 '''Jaigi Juhan''' (13. [[vahtsõaastakuu]] [[1899]] [[Sännä mõisa]] – 10. [[joulukuu]] [[1948]] [[Stokholm]]) oll' eesti [[kiränik]] ja [[aokiränik]].
 
 ==Elokäük==
-Jaigi Juhan kasvi üles [[Tsooru valla]] [[Roosigu mõisan]] ja [[Luhamõtsa]]n. [[1913]]. aastagal lõpõt' [[Tsooru]] ministeeriumikoolin (parhillaq [[Lepistü kuul']]). Perän läts' elämä [[Võro]]lõ. [[1915]]. aastagal saadõti poliitiliidsil põhjuisil [[Võromaa]]lt vällä ja [[1915]]–[[1917]] elli [[Volga]]-viirsin liinun. [[1917]]. aastagal tull' tä tagasi [[Võro]]lõ. [[1918]]. aastagal võtiq bolševiguq tä kinniq. Kui tä vabas sai, läts' tä [[Talliin|Talliin]]alõ, kon nakas' op'ma õdagukeskkoolin ja syakoolin. Pia läts' tä [[Vabahussõda|Vabahussõtta]]. 
+Jaigi Juhan kasvi üles [[Tsooru vald|Tsooru valla]] [[Roosigu mõisa]]n ja [[Luhamõtsa]]n. [[1913]]. aastagal lõpõt' tä [[Tsooru]] ministeeriumikooli (miä ildampa oll' [[Lepistü kuul']]). Perän läts' elämä [[Võro]]lõ. [[1915]]. aastagal saadõti poliitiliidsil põhjuisil [[Võromaa]]lt vällä ja [[1915]]–[[1917]] elli [[Volga]]-viirsin liinun. [[1917]]. aastagal tull' tä tagasi Võrolõ. [[1918]]. aastagal võtiq bolševiguq tä kinniq. Kui tä vabas sai, läts' tä [[Talliin|Talliina]], kon nakas' op'ma õdagukeskkoolin ja syakoolin. Pia läts' tä [[Vabahussõda|Vabahussõtta]]. 
 
-[[1920]]-[[1924]] tüüt' [[Talliinan Eesti Kirjastus-Ühisusõn]], sis [[Pääväleht'|Päävälehe]], [[Postimiis'|Postimehe]] ja [["Kaitse Kodu!"]] toimõndusõn. [[1935]]-[[1936]] oll' Jaik [[Eesti Raamatuaasta]] pääsekretär, 1936-1940 [[Haridusministri]] [[nõunik]]. Võtt' ossa [[Autorikaitse Ühingu]] asutamisõst ja tuu tegemiisi kõrraldamisõst [[1934]]-[[1938]]. [[1941]] oll' [[Võrumaa Teataja]] toimõndaja.
+[[1920]]-[[1924]] tüüt' Talliinan [[Eesti Kirjastus-Ühisus]]õn, sis [[Pääväleht|Päävälehe]], [[Postimiis|Postimehe]] ja [["Kaitse Kodu!"]] toimõndusõn. [[1935]]-[[1936]] oll' Jaik [[Eesti Raamaduaasta]] pääsekretär, 1936-1940 [[Haridusministri]] [[nõunik]]. Võtt' ossa [[Autorikaitse Ühing]]u asutamisõst ja tuu tegemiisi kõrraldamisõst [[1934]]-[[1938]]. [[1941]] oll' [[Võrumaa Teataja]] toimõndaja.
 
 9. [[mahlakuu]] pääväl [[1927]] abiellu Jaigi Juhan Kanarigu Wilhelminagaq [[Tarto]]st, kiä oll' Kanarigu Jakobi ja Adamsi Marie-Helene tütär. Laulatus oll' [[Jaani kerik|Jaani kerikun]] [[Talliin]]an. [[1930]] sündü edimäne lats' Peep, kiä 3-aastagadsõlt sarlakilõ kuuli. Edesi sündüväq Ilo, Koit ja Säde.
 
