--- a/Jaigi_Juhan.mw
+++ b/Jaigi_Juhan.mw
@@ -8,13 +8,12 @@ Jaigi Juhan kasvi üles [[Tsooru vald|Tsooru valla]] [[Roosigu mõisa]]n ja [[Lu
 
 9. [[mahlakuu]] pääväl [[1927]] abiellu Jaigi Juhan Kanarigu Wilhelminagaq [[Tarto]]st, kiä oll' Kanarigu Jakobi ja Adamsi Marie-Helene tütär. Laulatus oll' [[Jaani kerik|Jaani kerikun]] [[Talliin]]an. [[1930]] sündü edimäne lats' Peep, kiä 3-aastagadsõlt sarlakilõ kuuli. Edesi sündüväq Ilo, Koit ja Säde.
 
-[[1944]] läts' Jaigi Juhan [[Eesti]]st [[S'aksamaa]]lõ, säält [[Prantsusmaa]] kaolt [[Roodsi|Ruutsi]]. Jaigi Juhan kuuli [[Katrineholm]]i haigõmajan 10. [[joulukuu]] pääväl 1948. Algusõn oll' annom' timä
-tuhagaq [[Katrineholm]]i krematooriumin hoiul, sis ostiq latsõq havvaplatsi [[Stokholm]]i [[Mõtsakalmistu]] pääle. 1990 matõti tä põrm ümbre [[Talliin]]a Rahumäe kalmuaida.
+[[1944]] läts' Jaigi Juhan [[Eesti]]st [[S'aksamaa]]lõ, säält [[Prantsusmaa]] kaolt [[Roodsi|Ruutsi]]. Jaigi Juhan kuuli [[Katrineholm]]i haigõmajan 10. [[joulukuu]] pääväl 1948. Algusõn oll' annom timä tuhagaq [[Katrineholm]]i krematooriumin hoiul, sis ostiq latsõq havvaplatsi [[Stokholm]]i [[Mõtsakalmistu]] pääle. 1990 matõti tä põrm ümbre [[Talliin]]a Rahumäe kalmuaida.
 
 ===Kirämehe [[Piiri Enno]] mälehtüisi perrä Jaigi Juhanist===
 "Oll' lihtsä miis'. Hinnäst uhkõs pitäq tä es mõistaq. Käve häämeelegaq rahvagaq läbi. Tälle miildü kyigigaq juttu ajjaq. Oll' tuu sis nuur vai vana, rikas vai vaenõ, pops', paremiis' vai kangõ rahvamiis'. Egäleütele oll' täl lahkõt synna ja kullõjat kõrva."
 
-[[Mihklikuu]]l 1938 peimiq [[Haani vald|Haani valla]] [[Plaani algkuul|Plaani algkoolin]] eesti raamadu 400. aastagapäivä. Jaik oll' eesti raamaduaastaga toimkunna pääsekretär'. Ta kynõl' meile yks süämest süämehe. Kingitüses tuudi tälle Haani vüügaq köüdet vilävihik, kon oll' 400 viläpääd 40 talo põllu päält. Kirämiis' nimet' tuud uma elo kygõ ilosambas kingitüses. Sääne meelenpidämine võtt' tä peris silmi pühkmä. Lilliq jagi ta nelä Haani vana imä vaihõl. [[Rüälill'|Rüälille]] kimbust tõmmas' ynnõ paar' häidsend ja tsusas' nuuq hindäle rynda." 
+[[Mihklikuu]]l 1938 peimiq [[Haani vald|Haani valla]] [[Plaani algkuul|Plaani algkoolin]] eesti raamadu 400. aastagapäivä. Jaik oll' eesti raamaduaastaga toimkunna pääsekretär'. Ta kynõl' meile yks süämest süämehe. Kingitüses tuudi tälle Haani vüügaq köüdet vilävihik, kon oll' 400 viläpääd 40 talo põllu päält. Kirämiis' nimet' tuud uma elo kygõ ilosambas kingitüses. Sääne meelenpidämine võtt' tä peris silmi pühkmä. Lilliq jagi ta nelä Haani vana imä vaihõl. [[Rüälill'|Rüälille]] kimbust tõmmas' ynnõ paar' häidsend ja tsusas' nuuq hindäle rynda."
 
 ==Looming==
 Jaigi Juhan sai kirotamisõs mõttit vanost rahvajutõst, [[Pärlijõõ]]st ja esä nal'ajutussist. Ütte ku tõist mõtõl' umast pääst kah mano. Suurõmbalt jaolt kirot' tä juttõ [[eesti kiil|eesti keeli]]. A pall'oq tegeläseq ja kotusõq ommaq yks [[Võromaa]]lt peri. Täl om luulõraamadukõnõ "Rõuge kiriku kell", kon myni [[võro kiil|võrokeeline]] luulõtus kah seen. 
