--- a/Jaigi_Juhan.mw
+++ b/Jaigi_Juhan.mw
@@ -16,9 +16,9 @@ Jaigi Juhan kasvi üles [[Tsooru vald|Tsooru valla]] [[Roosigu mõisa]]n ja [[Lu
 [[Mihklikuu]]l 1938 peimiq [[Haani vald|Haani valla]] [[Plaani algkuul|Plaani algkoolin]] eesti raamadu 400. aastagapäivä. Jaik oll' eesti raamaduaastaga toimkunna pääsekretär'. Ta kynõl' meile yks süämest süämehe. Kingitüses tuudi tälle Haani vüügaq köüdet vilävihik, kon oll' 400 viläpääd 40 talo põllu päält. Kirämiis' nimet' tuud uma elo kygõ ilosambas kingitüses. Sääne meelenpidämine võtt' tä peris silmi pühkmä. Lilliq jagi ta nelä Haani vana imä vaihõl. [[Rüälill'|Rüälille]] kimbust tõmmas' ynnõ paar' häidsend ja tsusas' nuuq hindäle rynda."
 
 ==Looming==
-Jaigi Juhan sai kirotamisõs mõttit vanost rahvajutõst, [[Pärlijõõ]]st ja esä nal'ajutussist. Ütte ku tõist mõtõl' umast pääst kah mano. Suurõmbalt jaolt kirot' tä juttõ [[eesti kiil|eesti keeli]]. A pall'oq tegeläseq ja kotusõq ommaq yks [[Võromaa]]lt peri. Täl om luulõraamadukõnõ "Rõuge kiriku kell", kon myni [[võro kiil|võrokeeline]] luulõtus kah seen. 
+Jaigi Juhan sai kirotamisõs mõttit vanost rahvajutõst, [[Pärlijõgi|Pärlijõõst]] ja esä nal'ajutussist. Ütte ku tõist mõtõl' umast pääst kah mano. Suurõmbalt jaolt kirot' tä juttõ [[eesti kiil|eesti keeli]]. A pall'oq tegeläseq ja kotusõq ommaq yks [[Võromaa]]lt peri. Täl om luulõraamadukõnõ "Rõuge kiriku kell", kon myni [[võro kiil|võrokeeline]] luulõtus kah seen. 
 
-Timä juttõ tegeläseq ommaq tondiq, nõiaq ja tõõsõq põrgulisõq. Noid saa kundsa all hoitaq ynnõ kaarnakivi abigaq. Tuu om nõiavõimugaq kivi, mink piät varastama kaarna pesäst. Parõmba sordi kivil avitas hää käe edimädse sõrmõgaq kraap'misõst ja mõttõn suuv'misõst, et sooviq täüde lääsiq. 
+Timä juttõ tegeläseq ommaq tondiq, nõiaq ja tõõsõq põrgulisõq. Noid saa kundsa all hoitaq ynnõ kaarnakivi abigaq. Tuu om nõiavõimugaq kivi, mink piät varastama kaarna pesäst. Parõmba sordi kivil avitas hää käe edimädse sõrmõgaq kraap'misõst ja mõttõn suuv'misõst, et sooviq täüde lääsiq.
 
 ==Teossõq==
 ===Luulõkogoq===
