--- a/Jaigi_Juhan.mw
+++ b/Jaigi_Juhan.mw
@@ -87,7 +87,7 @@ Timä juttõ tegeläseq ommaq tondiq, nõiaq ja tõõsõq põrgulisõq. Noid saa
 
 ==Kirändüs==
 *Reimann, Nele 2004. "Võromaa kodolugu". Võro Instituut'.
-== Välislingid ==
+== Välislingiq ==
 *[http://www.post.ee/?id=1595&prod_id=227 Eesti Posti postmark Juhan Jaik 100]
 *[http://www.wi.ee/voro/index.php/kiraenigu/juhan-jaik Võro kiränduse kodoleht]
 
