picture of Hraparak

--- a/Jerevan.mw
+++ b/Jerevan.mw
@@ -15,7 +15,7 @@
 |  kaardi_pilt = 
 |  kaardiallkiri = <!--Kon Jerevan Armeeniän om-->
 }}
-
+[[File:Yerevan_post_office.jpg|thumb|left|Hraparak]]
 '''Jerevan''' om [[Armeeniä]] [[pääliin]] nink kõgõ suurõmb [[liin]].
 
 [[Katõgooria:Armeeniä liinaq]]
